# cogpilot-cli

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  QUICKREF.md  README.md  changelog.md  demo.sh  test_cli.sh  test_interactive.sh
.github/agents/: gitcog-builder.md
_codeql_build_dir/examples/: atomspace_demo  basic_usage  cogloop_demo
docs/: BUILD.md  CLI_USAGE.md  FINAL_SUMMARY.md  IMPLEMENTATION.md  KERNEL_FUNCTION_MANIFEST.md  KERNEL_STATUS_REPORT.md  VISUAL_GUIDE.md
examples/: CMakeLists.txt  atomspace_demo.c  basic_usage.c  cogloop_demo.c
include/: cogkern.h
src/: atomspace.c  cli.c  cogkern.c  cogloop.c  ecan.c  pln.c
